--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     container_name: smokeping
     volumes:
       - /etc/localtime:/etc/localtime
-      - ./config:/etc/smokeping
-      - ./data:/var/lib/smokeping
+      - ./config:/config
+      - ./data:/data
     ports:
       - 80:80
     restart: always
