proper apache stop

--- a/rootfs/etc/supervisor/conf.d/smokeping.conf
+++ b/rootfs/etc/supervisor/conf.d/smokeping.conf
@@ -13,6 +13,8 @@ autorestart=true
 stdout_logfile=/var/log/supervisor/%(program_name)s.log
 stderr_logfile=/var/log/supervisor/%(program_name)s.log
 command=/usr/sbin/apache2ctl -D FOREGROUND
+killasgroup=true
+stopasgroup=true
 
 [program:smokeping]
 startsecs=0
