--- a/rootfs/etc/supervisor/conf.d/smokeping.conf
+++ b/rootfs/etc/supervisor/conf.d/smokeping.conf
@@ -2,8 +2,10 @@
 startsecs=0
 autostart=true
 autorestart=false
-stdout_logfile=/var/log/supervisor/%(program_name)s.log
-stderr_logfile=/var/log/supervisor/%(program_name)s.log
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
 command=/run.sh
 
 [program:apache]
