update supervisor.sh, add sigterm grace period

--- a/rootfs/etc/supervisor.yaml
+++ b/rootfs/etc/supervisor.yaml
@@ -1,5 +1,7 @@
-jobs:
+supervisor:
+  sigterm_grace_period: 60
 
+jobs:
   - name: "Initialization"
     command: "/usr/bin/run.sh || kill -SIGTERM 1"
     restart: "off"
